Lektion 22 - Queues Done
- Lavet egen linketlist til opgave 1
- StackQueue implementeret i opgave 4